# VisionAIRecaptchaSolver

./: .gitignore  LICENSE  README.md  demo.py  demo_async.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/vision_ai_recaptcha_solver/: __init__.py  __main__.py  async_solver.py  config.py  constants.py  exceptions.py  logging_config.py  resource_allocation.py  solver.py  types.py  utils.py
src/vision_ai_recaptcha_solver/browser/: __init__.py  navigation.py
src/vision_ai_recaptcha_solver/captcha/: __init__.py  base_handler.py  dynamic_handler.py  image_utils.py  selection_handler.py  square_handler.py
src/vision_ai_recaptcha_solver/detector/: __init__.py  grid_utils.py  yolo_detector.py
tests/: test_config.py  test_grid_utils.py  test_image_utils.py  test_resource_allocation.py  test_types.py
train_model/: export_onnx.py  train_model.ipynb
