[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-ai-recaptcha-solver"
version = "1.0.2"
description = "AI powered reCAPTCHA solver using YOLO object detection"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Danny Luna" }]
keywords = ["recaptcha", "captcha", "solver", "yolo", "automation", "ai"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "recaptcha-domain-replicator>=1.0.6",
    "ultralytics>=8.3",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "requests>=2.28.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
vision-ai-recaptcha-solver = "vision_ai_recaptcha_solver.__main__:cli"

[project.urls]
Homepage = "https://github.com/DannyLuna17/VisionAIRecaptchaSolver"
Repository = "https://github.com/DannyLuna17/VisionAIRecaptchaSolver"
Issues = "https://github.com/DannyLuna17/VisionAIRecaptchaSolver/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vision_ai_recaptcha_solver*"]

[tool.setuptools.package-data]
vision_ai_recaptcha_solver = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["vision_ai_recaptcha_solver"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Ignore missing type stubs for external dependencies
[[tool.mypy.overrides]]
module = [
    "ultralytics",
    "ultralytics.*",
    "cv2",
    "cv2.*",
    "PIL",
    "PIL.*",
    "aiohttp",
    "aiohttp.*",
    "tenacity",
    "tenacity.*",
    "click",
    "click.*",
    "requests",
    "requests.*",
    "recaptcha_domain_replicator",
    "recaptcha_domain_replicator.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
